# hdfc-cc-parser

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
cc-parser-ui/: Cargo.toml  index.html
cc-parser-ui/src/: app.rs  lib.rs
docs/: cc-parser-ui-5ea39aef51cadb31_bg.wasm  cc-parser-ui-87b1d7b790b46baa.js  cc-parser-ui-87b1d7b790b46baa_bg.wasm  cc-parser-ui-dd06f3e7a6dc2a09.js  cc-parser-ui-dd06f3e7a6dc2a09_bg.wasm  index.html
src/: lib.rs  main.rs
