[package]
name = "hdfc-cc-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "hdfc-cc-parser"
required-features = ["cli"]

[dependencies]
lopdf = "0.34"
regex = "1"
wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
csv = { version = "1", optional = true }

[features]
default = ["cli"]
cli = ["clap", "csv"]
wasm = ["wasm-bindgen"]

