[package]
name = "cc-parser-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
hdfc-cc-parser = { path = "..", default-features = false }
web-sys = { version = "0.3", features = ["HtmlInputElement", "File", "FileList", "Blob", "BlobPropertyBag", "Url", "Window", "console"] }
js-sys = "0.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

